[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "promptcmp"
version = "0.1.0"
description = "Compare responses from multiple local Ollama models side-by-side"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
promptcmp = "promptcmp:main"

[tool.setuptools]
py-modules = ["promptcmp"]
